--- a/packages/SystemUI/res/values/evolution_strings.xml
+++ b/packages/SystemUI/res/values/evolution_strings.xml
@@ -194,13 +194,13 @@
     <string name="active_edge_activity_select_title">Select activity</string>
 
     <!-- Gaming Mode -->
-    <string name="gaming_mode_tile_title">Gaming Mode</string>
-    <string name="gaming_mode_tile_toast">Gaming mode enabled</string>
-    <string name="gaming_mode_tile_toast_disabled">Gaming mode disabled</string>
-    <string name="gaming_mode_dialog_title">Gaming Mode</string>
-    <string name="gaming_mode_dialog_message">Gaming mode is capable of toggling heads-up, hardware keys, DND, nav-bar, auto brightness and setting media volume. All of the toggled settings will be toggled back once you exit Gaming Mode. Long press for settings</string>
-    <string name="accessibility_quick_settings_gaming_mode_on">Gaming mode on</string>
-    <string name="accessibility_quick_settings_gaming_mode_off">Gaming mode off</string>
+    <string name="gaming_mode_tile_title">Gaming Macro</string>
+    <string name="gaming_mode_tile_toast">Gaming macros enabled</string>
+    <string name="gaming_mode_tile_toast_disabled">Gaming macros disabled</string>
+    <string name="gaming_mode_dialog_title">Gaming Macro</string>
+    <string name="gaming_mode_dialog_message">Gaming Macro is capable of toggling heads-up, hardware keys, DND, nav-bar, auto brightness and setting media volume. All of the toggled settings will be toggled back once you disable Gaming Macro. Long press for settings</string>
+    <string name="accessibility_quick_settings_gaming_mode_on">Gaming macros on</string>
+    <string name="accessibility_quick_settings_gaming_mode_off">Gaming macros off</string>
     <string name="gaming_mode_panel_headsup_title">Disable Heads Up</string>
     <string name="gaming_mode_panel_zen_title">Enable Do Not Disturb</string>
     <string name="gaming_mode_panel_navbar_title">Disable navigation bar</string>
