Add config overlay to force enable multi resolution for camera
* Apparently, required by OOS camera port.

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/core/res/res/values/evolution_config.xml
+++ b/core/res/res/values/evolution_config.xml
@@ -139,4 +139,7 @@
     <!-- NightLight FOD -->
     <bool name="disable_fod_night_light">false</bool>
 
+    <!-- Whether to force enable multi resolution configuration for camera -->
+    <bool name="config_forceMultiResolution">false</bool>
+
 </resources>
